    option will expand the plot to take up as much room as possible on
    the page without distorting the original aspect ratio of the plot.

 ** Printing using the -dtiff output device will now create compressed
    images using LZW compression.  This change was made for Matlab
    compatibility.  To produce uncompressed images use the -dtiffn
    device.

 ** It is now possible to use files and folders containing Unicode
    characters in Windows.

 ** The FFTW library is now required to perform FFT calculations.
    The FFTPACK sources have been removed from Octave.

 ** The OSMesa library is no longer used.  To print invisible figures
    when using OpenGL graphics, the Qt QOFFSCREENSURFACE feature must be
    available and you must use the qt graphics toolkit.

 ** The str2func function no longer accepts a second "global" argument.
    This argument was typically used to allow functions that accept
    function names as arguments to avoid conflicts with subfunctions or
    nested functions.  Instead, it's best to avoid this situation
    entirely and require users to pass function handles rather than
    function names.

 ** New functions added in 5.0:

      clearvars
      isfile
      isfolder
      movegui
      openfig
      ordeig
      savefig
      uitable

 ** Legacy functions.

    The following functions have been declared legacy functions which
    means they are obsolete and should not be used in any new code.
    Unlike deprecated functions, however, their removal from Octave has
    not yet been scheduled.

      Function             | Replacement
      ---------------------|------------------
      findstr              | strfind
      flipdim              | flip
      isdir                | isfolder or dir_in_loadpath
      isequalwithequalnans | isequaln
      isstr                | ischar
      setstr               | char
      strmatch             | strncmp or strcmp
      strread              | textscan